[project]
name = "podcast-agent"
version = "1.0.0"
description = "podcast agent"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.0",
    "fastapi>=0.135.1",
    "isort>=8.0.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.11",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.0",
    "openai>=2.0.0",
    "pinecone>=7.0.0",
    "yt-dlp>=2024.1.1",
]
